tests/sumo/spec/departure/errors/lane_given_disallowed/errors.sumo.meso
Error: Vehicle '1' is not allowed to depart on any lane of edge 'SC'.
Quitting (on error).
